--- a/Senai MVC/Senai MVC/Views/Escola/Form.cshtml
+++ b/Senai MVC/Senai MVC/Views/Escola/Form.cshtml
@@ -7,12 +7,39 @@
 
 	<div class="mb-3">
 		<input type="hidden" asp-for="Id" />
-		<label class="form-label">Nome</label>
+		<label class="form-label">Nome Escola</label>
 		<input type="text" class="form-control" asp-for="Nome" />
 		@Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
 	</div>
-	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-		<button type="submit" class="btn btn-success">Adicionar</button>
+
+	<div class="row">
+		<div class="col-md-5">
+			<label class="form-label">Rua</label>
+			<input type="text" class="form-control" asp-for="Endereco.Rua" />
+		</div>
+		<div class="col-md-5">
+			<label class="form-label">Bairro</label>
+			<input type="text" class="form-control" asp-for="Endereco.Bairro" />
+		</div>
+		<div class="col-md-2">
+			<label class="form-label">Número</label>
+			<input type="text" class="form-control" asp-for="Endereco.Numero" />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<label class="form-label">Cidade</label>
+			<input type="text" class="form-control" asp-for="Endereco.Cidade" />
+		</div>
+		<div class="col-md-6">
+			<label class="form-label">Estado</label>
+			<input type="text" class="form-control" asp-for="Endereco.Estado" />
+		</div>
 	</div>
 
+	<br />
+	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		<button href="Index" class="btn btn-secondary">Cancelar</button>
+		<button type="submit" class="btn btn-success">Salvar</button>
+	</div>
 </form>
