--- a/Senai MVC/Senai MVC/Views/Escola/Form.cshtml
+++ b/Senai MVC/Senai MVC/Views/Escola/Form.cshtml
@@ -38,8 +38,9 @@
 	</div>
 
 	<br />
+
 	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-		<button href="Index" class="btn btn-secondary">Cancelar</button>
+		<button type="button" class="btn btn-secondary">Cancelar</button>
 		<button type="submit" class="btn btn-success">Salvar</button>
 	</div>
 </form>
