--- a/Senai MVC/Senai MVC/Views/Shared/_Layout.cshtml
+++ b/Senai MVC/Senai MVC/Views/Shared/_Layout.cshtml
@@ -8,12 +8,26 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Senai_MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <style>
+        html, body {
+            height: auto;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .container {
+            flex: 1 0 auto;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Senai_MVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Gerênciamento</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,6 +47,17 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - Senai_MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <style>
+                footer {
+                    /* Define a altura máxima do rodapé */
+                    max-height: 100px;
+                    /* Garante que o rodapé ocupe toda a largura */
+                    width: 100%;
+                    /* Opcional: Centraliza o conteúdo verticalmente */
+                    display: flex;
+                    align-items: center;
+                }
+            </style>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
